bug in order and css of too long description

--- a/app/assets/stylesheets/store.css.scss
+++ b/app/assets/stylesheets/store.css.scss
@@ -57,7 +57,10 @@
       }
       
       #description{
+        width: 240px;
         color: #444444;
+        white-space: normal;
+        word-wrap: break-word;
       } 
       
       a {
